--- a/server/.env-sample
+++ b/server/.env-sample
@@ -1,4 +1,4 @@
-SQL_USER= 
-SQL_DATABASE= 
-SQL_PASSWORD= 
-SQL_PORT= 
+SQL_USER= // probably postgresql
+SQL_DATABASE= // the name of the database you'll use
+SQL_PASSWORD= // self explanatory
+SQL_PORT= // 5432
